--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,9 @@ body {
     font-family: "Inter", sans-serif;
     background: var(--bg-primary);
     color: var(--text-primary);
+
+}
+
+html {
+    scroll-behavior: smooth;
 }
